Bindinga and database for recipes

--- a/YWWACP/YWWACP/YWWACP.csproj
+++ b/YWWACP/YWWACP/YWWACP.csproj
@@ -16,7 +16,7 @@
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v7.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -167,6 +167,8 @@
     <Compile Include="SplashScreen.cs" />
     <Compile Include="Database\SQLiteDroid.cs" />
     <Compile Include="Views\FirstView.cs" />
+    <Compile Include="Views\RecipeActivity.cs" />
+    <Compile Include="Views\SingleRecipeView.cs" />
     <Compile Include="Views\WriteCommentView.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -234,6 +236,15 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\MyThreads.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\RecipeListViewRow.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\SingleRecipe.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\SingleRecipeListViewRow.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
