--- a/YWWACP/YWWACP/packages.config
+++ b/YWWACP/YWWACP/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acr.MvvmCross.Plugins.UserDialogs" version="5.0.0" targetFramework="monoandroid60" />
+  <package id="Acr.Support" version="2.0.2" targetFramework="monoandroid60" />
+  <package id="Acr.UserDialogs" version="5.0.0" targetFramework="monoandroid60" />
   <package id="Crosslight.Xamarin.Android.Support.v4" version="23.1.1" targetFramework="monoandroid70" />
   <package id="Crosslight.Xamarin.Android.Support.v7.AppCompat" version="23.1.1" targetFramework="monoandroid70" />
   <package id="Microsoft.Azure.Mobile.Client" version="3.0.1" targetFramework="monoandroid60" />
@@ -9,11 +12,23 @@
   <package id="MvvmCross" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Binding" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Core" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="MvvmCross.Droid.Shared" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="MvvmCross.Droid.Support.V14.Preference" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="MvvmCross.Droid.Support.V4" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Platform" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.StarterPack" version="4.3.0" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
   <package id="OxyPlot.Core" version="1.0.0-unstable1983" targetFramework="monoandroid70" />
   <package id="OxyPlot.Xamarin.Android" version="1.0.0-unstable1983" targetFramework="monoandroid70" />
+  <package id="Splat" version="1.6.2" targetFramework="monoandroid60" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="monoandroid60" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Design" version="23.0.1.3" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v14.Preference" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v4" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.Preference" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.4.0.1" targetFramework="monoandroid60" />
 </packages>
