--- a/YWWACP/YWWACP/packages.config
+++ b/YWWACP/YWWACP/packages.config
@@ -15,6 +15,7 @@
   <package id="MvvmCross.Droid.Shared" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Droid.Support.V14.Preference" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Droid.Support.V4" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="MvvmCross.Droid.Support.V7.AppCompat" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Platform" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.StarterPack" version="4.3.0" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
