--- a/YWWACP/YWWACP/Properties/AndroidManifest.xml
+++ b/YWWACP/YWWACP/Properties/AndroidManifest.xml
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="YWWACP4.droid" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="YWWACP.YWWACP" android:versionCode="1" android:versionName="1.0" android:installLocation="preferExternal">
 	<uses-sdk android:minSdkVersion="16" />
 	<uses-permission android:name="android.permission.READ_CALENDAR" />
 	<uses-permission android:name="android.permission.WRITE_CALENDAR" />
-	<application android:label="YWWACP4" android:theme="@style/MainTheme"></application>
+	<application android:label="YWWACP" android:theme="@style/MyTheme">
+		<!--<activity android:name="com.YWWACP.YWWACP.MySettingsFragment" android:label="@string/ApplicationName" ></activity>
+    <activity android:name="YWWACP.YWWACP/md571ace0a4b16b292ac22f62155d888856.MyListFragment" android:label="@string/ApplicationName" ></activity>-->
+	</application>
 </manifest>
