--- a/YWWACP/YWWACP/packages.config
+++ b/YWWACP/YWWACP/packages.config
@@ -12,6 +12,7 @@
   <package id="MvvmCross" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Binding" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Core" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="MvvmCross.Droid.FullFragging" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Droid.Shared" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Droid.Support.V14.Preference" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Droid.Support.V4" version="4.3.0" targetFramework="monoandroid60" />
@@ -25,7 +26,7 @@
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="monoandroid60" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Design" version="23.0.1.3" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Design" version="23.4.0.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v14.Preference" version="23.4.0.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.4.0.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="23.4.0.1" targetFramework="monoandroid60" />
