--- a/YWWACP/YWWACP/YWWACP.csproj
+++ b/YWWACP/YWWACP/YWWACP.csproj
@@ -16,7 +16,7 @@
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v7.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -147,18 +147,15 @@
     <Compile Include="dialog_ChooseHealthPlan.cs" />
     <Compile Include="Views\CreateNewThreadView.cs" />
     <Compile Include="DiaryActivity.cs" />
-    <Compile Include="ExerciseActivity.cs" />
-    <Compile Include="ExerciseDialog.cs" />
-    <Compile Include="GridAdapter-exercise.cs" />
     <Compile Include="HealthPlanActivity.cs" />
     <Compile Include="LinkerPleaseInclude.cs" />
     <Compile Include="ListViewAdapter.cs" />
     <Compile Include="NewDiscussionThread.cs" />
     <Compile Include="NewHealthPlanActivity.cs" />
     <Compile Include="Views\EditProfileView.cs" />
+    <Compile Include="Views\ExerciseActivity.cs" />
     <Compile Include="Views\MyThreadsView.cs" />
     <Compile Include="Views\ProfileActivity.cs" />
-    <Compile Include="RecipesActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GridAdapter.cs" />
@@ -168,6 +165,7 @@
     <Compile Include="Database\SQLiteDroid.cs" />
     <Compile Include="Views\FirstView.cs" />
     <Compile Include="Views\RecipeActivity.cs" />
+    <Compile Include="Views\SingleExerciseView.cs" />
     <Compile Include="Views\SingleRecipeView.cs" />
     <Compile Include="Views\WriteCommentView.cs" />
   </ItemGroup>
@@ -196,7 +194,6 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\recipeDialogView.axml" />
-    <AndroidResource Include="Resources\layout\RecipeMain.axml" />
     <AndroidResource Include="Resources\drawable\recipeIcon.png" />
     <AndroidResource Include="Resources\layout\FirstView.axml" />
     <AndroidResource Include="Resources\layout\Dialog_ChooseHealthPlan.axml" />
@@ -245,6 +242,18 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\SingleRecipeListViewRow.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\Exercise.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\ExerciseListViewRow.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\SingleExercise.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\SingleExerciseListViewRow.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
