--- a/YWWACP/YWWACP/YWWACP.csproj
+++ b/YWWACP/YWWACP/YWWACP.csproj
@@ -206,13 +206,12 @@
     <Compile Include="NewDiscussionThread.cs" />
     <Compile Include="NewHealthPlanActivity.cs" />
     <Compile Include="Views\DeleteThreadFragment.cs" />
+    <Compile Include="Views\DiaryView.cs" />
     <Compile Include="Views\EditProfileView.cs" />
-
     <Compile Include="Views\ExerciseDetailsView.cs" />
     <Compile Include="Views\HealthPlanExercisesView.cs" />
     <Compile Include="Views\HealthPlanView.cs" />
     <Compile Include="Views\ExerciseActivity.cs" />
-
     <Compile Include="Views\MyThreadsView.cs" />
     <Compile Include="Views\NewHealthPlanView.cs" />
     <Compile Include="Views\ProfileActivity.cs" />
@@ -295,7 +294,6 @@
     <AndroidResource Include="Resources\layout\MyThreads.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-
     <AndroidResource Include="Resources\layout\Dialog_DeleteThread.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
@@ -304,7 +302,6 @@
     <AndroidResource Include="Resources\layout\ExerciseAdd.axml" />
     <AndroidResource Include="Resources\layout\HealthPlanExerciseRow.axml" />
     <AndroidResource Include="Resources\layout\HealthPlanExercises.axml" />
-
     <AndroidResource Include="Resources\layout\RecipeListViewRow.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
@@ -326,7 +323,9 @@
     <AndroidResource Include="Resources\layout\SingleExerciseListViewRow.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-
+    <AndroidResource Include="Resources\layout\DiaryEntryRow.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
