--- a/YWWACP/YWWACP/YWWACP.csproj
+++ b/YWWACP/YWWACP/YWWACP.csproj
@@ -207,12 +207,10 @@
     <Compile Include="NewHealthPlanActivity.cs" />
     <Compile Include="Views\DeleteThreadFragment.cs" />
     <Compile Include="Views\EditProfileView.cs" />
-
     <Compile Include="Views\ExerciseDetailsView.cs" />
     <Compile Include="Views\HealthPlanExercisesView.cs" />
     <Compile Include="Views\HealthPlanView.cs" />
     <Compile Include="Views\ExerciseActivity.cs" />
-
     <Compile Include="Views\MyThreadsView.cs" />
     <Compile Include="Views\NewHealthPlanView.cs" />
     <Compile Include="Views\ProfileActivity.cs" />
@@ -295,7 +293,6 @@
     <AndroidResource Include="Resources\layout\MyThreads.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-
     <AndroidResource Include="Resources\layout\Dialog_DeleteThread.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
@@ -304,7 +301,6 @@
     <AndroidResource Include="Resources\layout\ExerciseAdd.axml" />
     <AndroidResource Include="Resources\layout\HealthPlanExerciseRow.axml" />
     <AndroidResource Include="Resources\layout\HealthPlanExercises.axml" />
-
     <AndroidResource Include="Resources\layout\RecipeListViewRow.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
@@ -326,7 +322,9 @@
     <AndroidResource Include="Resources\layout\SingleExerciseListViewRow.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-
+    <AndroidResource Include="Resources\layout\navbar.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
@@ -385,6 +383,11 @@
     <AndroidResource Include="Resources\values\SplashStyle.xml" />
     <AndroidResource Include="Resources\drawable\trashIcon.png" />
     <AndroidResource Include="Resources\drawable\trashsmall.png" />
+    <AndroidResource Include="Resources\drawable\chat.png" />
+    <AndroidResource Include="Resources\drawable\diary.png" />
+    <AndroidResource Include="Resources\drawable\hc.png" />
+    <AndroidResource Include="Resources\drawable\hp.png" />
+    <AndroidResource Include="Resources\drawable\web.png" />
     <Content Include="ToDo-MvvmCross\_ Droid UI.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
