--- a/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
+++ b/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Models\Comments.cs" />
     <Compile Include="Models\DatabaseTables.cs" />
     <Compile Include="Models\Exercise.cs" />
+    <Compile Include="Models\Goal.cs" />
     <Compile Include="Models\KeyPair.cs" />
     <Compile Include="Models\Meal.cs" />
     <Compile Include="Models\NewDiscussionThread.cs" />
