--- a/YWWACP/YWWACP/Properties/AndroidManifest.xml
+++ b/YWWACP/YWWACP/Properties/AndroidManifest.xml
@@ -3,5 +3,5 @@
 	<uses-sdk android:minSdkVersion="16" />
 	<uses-permission android:name="android.permission.READ_CALENDAR" />
 	<uses-permission android:name="android.permission.WRITE_CALENDAR" />
-	<application android:label="YWWACP4" android:theme="@style/MainTheme"></application>
+	<application android:label="YWWACP4" android:theme="@style/MainTheme" android:icon="@drawable/IconFlower"></application>
 </manifest>
