--- a/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
+++ b/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
@@ -54,15 +54,15 @@
     <Compile Include="Models\NewExerciseThread.cs" />
     <Compile Include="Models\NewRecipeThread.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\CommentsViewModel.cs" />
-    <Compile Include="ViewModels\ComunityViewModel.cs" />
+    <Compile Include="ViewModels\Community\CommentsViewModel.cs" />
+    <Compile Include="ViewModels\Community\ComunityViewModel.cs" />
     <Compile Include="ViewModels\CreateExerciseViewModel.cs" />
-    <Compile Include="ViewModels\CreateNewThreadViewModel.cs" />
-    <Compile Include="ViewModels\DeleteThreadViewModel.cs" />
+    <Compile Include="ViewModels\Community\CreateNewThreadViewModel.cs" />
+    <Compile Include="ViewModels\Community\DeleteThreadViewModel.cs" />
     <Compile Include="ViewModels\Diary\DiaryDayViewModel.cs" />
     <Compile Include="ViewModels\Diary\DiaryViewModel.cs" />
-    <Compile Include="ViewModels\EditProfileFirstTimeViewModel.cs" />
-    <Compile Include="ViewModels\EditProfileViewModel.cs" />
+    <Compile Include="ViewModels\Profile\EditProfileFirstTimeViewModel.cs" />
+    <Compile Include="ViewModels\Profile\EditProfileViewModel.cs" />
     <Compile Include="ViewModels\ExerciseViewModel.cs" />
     <Compile Include="ViewModels\FirstViewModel.cs" />
     <Compile Include="ViewModels\GraphViewModel.cs" />
@@ -74,14 +74,14 @@
     <Compile Include="ViewModels\Health Plan\HealthPlanViewModel.cs" />
     <Compile Include="ViewModels\Health Plan\MealDetailsViewModel.cs" />
     <Compile Include="ViewModels\ListExercisesViewModel.cs" />
-    <Compile Include="ViewModels\MyThreadsViewModel.cs" />
+    <Compile Include="ViewModels\Community\MyThreadsViewModel.cs" />
     <Compile Include="ViewModels\Health Plan\NewHealthPlanViewModel.cs" />
     <Compile Include="ViewModels\NewGoalViewModel.cs" />
-    <Compile Include="ViewModels\ProfileViewModel.cs" />
+    <Compile Include="ViewModels\Profile\ProfileViewModel.cs" />
     <Compile Include="ViewModels\RecipeViewModel.cs" />
     <Compile Include="ViewModels\SingleExerciseViewModel.cs" />
     <Compile Include="ViewModels\SingleRecipeViewModel.cs" />
-    <Compile Include="ViewModels\WriteCommentViewModel.cs" />
+    <Compile Include="ViewModels\Community\WriteCommentViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
