Completed diary and health plan pages with detail pages when clicking on meals and activities. Also did a lot of error handeling

--- a/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
+++ b/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
@@ -87,6 +87,8 @@
     <Compile Include="ViewModels\SingleExerciseViewModel.cs" />
     <Compile Include="ViewModels\SingleRecipeViewModel.cs" />
     <Compile Include="ViewModels\Community\WriteCommentViewModel.cs" />
+    <Compile Include="ViewModels\ViewExerciseDetailsViewModel.cs" />
+    <Compile Include="ViewModels\ViewMealDetailsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
