camera functions on recipes

--- a/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
+++ b/YWWACP_Core/YWWACP.Core/YWWACP.Core.csproj
@@ -87,6 +87,7 @@
     <Compile Include="ViewModels\SingleExerciseViewModel.cs" />
     <Compile Include="ViewModels\SingleRecipeViewModel.cs" />
     <Compile Include="ViewModels\Community\WriteCommentViewModel.cs" />
+    <Compile Include="ViewModels\TakePictureViewModel.cs" />
     <Compile Include="ViewModels\ViewExerciseDetailsViewModel.cs" />
     <Compile Include="ViewModels\ViewMealDetailsViewModel.cs" />
   </ItemGroup>
@@ -118,6 +119,10 @@
     </Reference>
     <Reference Include="MvvmCross.Platform, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MvvmCross.Platform.4.3.0\lib\portable-net45+win+wpa81+wp80\MvvmCross.Platform.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MvvmCross.Plugins.PictureChooser, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MvvmCross.Plugin.PictureChooser.4.3.0\lib\portable-net45+win+wpa81+wp80\MvvmCross.Plugins.PictureChooser.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
