--- a/YWWACP/YWWACP/packages.config
+++ b/YWWACP/YWWACP/packages.config
@@ -17,6 +17,7 @@
   <package id="MvvmCross.Droid.Support.V14.Preference" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Droid.Support.V4" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross.Platform" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="MvvmCross.Plugin.PictureChooser" version="4.3.0" targetFramework="monoandroid70" />
   <package id="MvvmCross.StarterPack" version="4.3.0" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
   <package id="OxyPlot.Core" version="1.0.0-unstable1983" targetFramework="monoandroid70" />
@@ -24,6 +25,10 @@
   <package id="Splat" version="1.6.2" targetFramework="monoandroid60" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="monoandroid60" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="monoandroid60" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.0.0" targetFramework="monoandroid60" />
+  <package id="SQLitePCLRaw.core" version="1.0.0" targetFramework="monoandroid60" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.0.0" targetFramework="monoandroid60" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.0.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.4.0.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.0.1.3" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v14.Preference" version="23.4.0.1" targetFramework="monoandroid60" />
@@ -32,8 +37,4 @@
   <package id="Xamarin.Android.Support.v7.Preference" version="23.4.0.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.4.0.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="SQLitePCLRaw.bundle_green" version="1.0.0" targetFramework="monoandroid60" />
-  <package id="SQLitePCLRaw.core" version="1.0.0" targetFramework="monoandroid60" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.0.0" targetFramework="monoandroid60" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.0.0" targetFramework="monoandroid60" />
 </packages>
