--- a/YWWACP_Core/YWWACP.Core/packages.config
+++ b/YWWACP_Core/YWWACP.Core/packages.config
@@ -8,6 +8,7 @@
   <package id="MvvmCross.Binding" version="4.3.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.Core" version="4.3.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.Platform" version="4.3.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="MvvmCross.Plugin.PictureChooser" version="4.3.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.StarterPack" version="4.3.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="OxyPlot.Core" version="1.0.0" targetFramework="portable45-net45+win8+wpa81" />
